[package]
name = "reflective_pe_dll_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.8.0"
thiserror = "1.0.58"
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "winnt",
    "libloaderapi",
] }
